<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/treatments"
            android:icon="@drawable/ic_list"
            android:title="@string/treatments" />
        <item
            android:id="@+id/inventory"
            android:icon="@drawable/ic_pill"
            android:title="@string/inventory" />
        <item
            android:id="@+id/history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_date_range_black_24dp"
            android:title="@string/calendar" />
        <item
            android:id="@+id/configuration"
            android:icon="@drawable/ic_configuration"
            android:title="@string/configuration" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/log_out_1" />
    </group>

</menu>