<?xml version="1.0" encoding="utf-8"?><!-- The Relative Layout provides margins. Margins don't work for Dialogs -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Aide">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <TextView
                    style="@style/ProductNameListStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:lines="2"
                    android:paddingTop="5dp"
                    android:singleLine="false"
                    android:text="@string/sure_new_prescription"
                    android:textColor="@color/blanco"
                    android:textSize="15dp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="true"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/ProductPriceListStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/name"
                            android:textColor="@color/blauFort"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/Name_drug_delete"
                            style="@style/ProductQuantityListStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="IBUPROFENO"
                            android:textColor="@color/blanco"
                            android:textSize="12dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="true"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/ProductPriceListStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pills_to_take_each_time"
                            android:textColor="@color/blauFort"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/Quantity_delete"
                            style="@style/ProductQuantityListStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="40 pills"
                            android:textColor="@color/blanco"
                            android:textSize="12dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="true"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/ProductPriceListStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frequency"
                            android:textColor="@color/blauFort"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/frequency_delete"
                            style="@style/ProductQuantityListStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="8 hours"
                            android:textColor="@color/blanco"
                            android:textSize="12dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="true"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/ProductPriceListStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/end_date"
                            android:textColor="@color/blauFort"
                            android:textSize="12dp" />

                        <TextView
                            android:id="@+id/end_date_delete"
                            style="@style/ProductQuantityListStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="2020-04-02"
                            android:textColor="@color/blanco"
                            android:textSize="12dp" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_gravity="center|right"
                    android:gravity="center">

                    <Button
                        android:id="@+id/YesDelete"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="2dp"
                        android:background="@drawable/round_button_background_green"
                        android:gravity="center_vertical|center_horizontal"
                        android:onClick="cancelActivity"
                        android:text="@string/yes"
                        android:textColor="#FFF"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="58dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <Button
                        android:id="@+id/NotDelete"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="2dp"
                        android:background="@drawable/round_button_background"
                        android:gravity="center_vertical|center_horizontal"
                        android:onClick="cancelActivity"
                        android:text="@string/no"
                        android:textColor="#FFF"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>