<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aide_gradient"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/general_calendar_layout"
        android:layout_marginLeft="27dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5">

            <Button
                android:id="@+id/btnOpenDatePicker"
                android:layout_width="59dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:background="@drawable/calendario_foto" />

            <LinearLayout
                android:layout_width="236dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="186dp"
                    android:layout_height="wrap_content"
                    android:text="@string/option"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="186dp"
                    android:layout_height="38dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/calendar_mode"
                        android:layout_width="102dp"
                        android:layout_height="34dp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/calendar"
                        android:textSize="20dp"
                        android:textStyle="bold|italic"></TextView>

                    <Switch
                        android:id="@+id/simpleSwitch"
                        android:layout_width="53dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:background="#00000000"
                        android:checked="true"
                        android:gravity="center"
                        android:textOff="@string/journey"
                        android:textOn="@string/calendar" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/set_activty_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:id="@+id/set_items_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
