<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/drug_item">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_layout_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardCornerRadius="@dimen/card_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:padding="@dimen/card_padding">

                <TextView
                    android:id="@+id/product_name_card"
                    style="@style/ProductNameListStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    tools:text="@string/product_name" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/blauFort"
                        android:text="@string/expiration_date"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/exp_date_card"
                        style="@style/ProductPriceListStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Aide"
                        android:textSize="10dp"
                        tools:text="10.0" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingTop="@dimen/card_padding"
                android:paddingRight="@dimen/card_padding"
                android:paddingBottom="@dimen/card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="10sp"
                    android:text="@string/quantity" />


                <TextView
                    android:id="@+id/product_quantity_card"
                    style="@style/ProductQuantityListStyle"
                    android:layout_width="56dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    tools:text="200" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:padding="@dimen/card_padding">

                <Button
                    android:id="@+id/info_button_card"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/color_text_input_layout"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="ℹ️"
                    android:textSize="10dp"
                    android:padding="@dimen/card_padding" />


            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>